--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "minimist": "^1.2.5",
+    "request": "^2.88.2",
     "util": "^0.12.3",
     "wav": "^1.0.2",
     "ws": "^7.4.1"
